prevent double scrolling

--- a/example/src/index.css
+++ b/example/src/index.css
@@ -20,7 +20,7 @@ code {
 
 .container {
   width:100%;
-  height:100%;
+  height:400rem;
   background-color: gray;
 }
 
